--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-editar-acta-ini-f-i-prc/ver-detalle-editar-acta-ini-f-i-prc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-editar-acta-ini-f-i-prc/ver-detalle-editar-acta-ini-f-i-prc.component.html
@@ -219,7 +219,7 @@
                       required
                       (keypress)="number($event)"
                       (ngModelChange)="getValueMeses($event); getMonth( $event )"
-                      onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                      onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                       oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       type="number"
                       formControlName="mesPlazoEjFase1"
@@ -272,7 +272,7 @@
                       (keypress)="number($event)"
                       (ngModelChange)="getDays( $event )"
                       onkeyup="if(this.value>29) this.value = 29;"
-                      onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                      onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                       oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       [matTooltipPosition]="'above'"
                       matTooltip="Campo numérico igual o menor a 29 días"
@@ -337,7 +337,7 @@
                       max="99"
                       required
                       (keypress)="number($event)"
-                      onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                      onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                       oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       type="number"
                       formControlName="mesPlazoEjFase2"
@@ -390,7 +390,7 @@
                       type="number"
                       formControlName="diasPlazoEjFase2"
                       onkeyup="if(this.value>29) this.value = 29;"
-                      onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                      onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                       [matTooltipPosition]="'above'"
                       matTooltip="Campo numérico igual o menor a 29 días"
                       matTooltipClass="info-tooltip"
