--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-tipo-pago-gbftrec/form-tipo-pago-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-tipo-pago-gbftrec/form-tipo-pago-gbftrec.component.html
@@ -28,7 +28,7 @@
                                 <mat-form-field class="full-width">
                                     <input matInput #nuevoValorAportante1 currencyMask maxlength="20" required
                                         formControlName="nuevoValorAportante1" (keypress)="validateNumberKeypress($event)"
-                                        onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                        onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                         [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }" />
                                 </mat-form-field>
                                 <span class="contador" [matTooltipPosition]="'above'"
