--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
@@ -337,7 +337,7 @@
                       currencyMask
                       required
                       maxLength="20"
-                      onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                      onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                       oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'left' }"
                       formControlName="valorAportanteProyecto"
@@ -620,7 +620,7 @@
                                           currencyMask
                                           required
                                           maxLength="20"
-                                          onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                          onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                           oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                           [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'left' }"
                                           formControlName="valorUso"
