--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-estudio-de-mercado/form-estudio-de-mercado.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-estudio-de-mercado/form-estudio-de-mercado.component.html
@@ -26,7 +26,7 @@
                   min="1"
                   max="99"
                   maxlength="2"
-                  onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                   oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                   required
                   formControlName="cuantasCotizaciones"
