--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-contratos-asociados-dj/form-contratos-asociados-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-contratos-asociados-dj/form-contratos-asociados-dj.component.html
@@ -8,7 +8,7 @@
           }"><b>Número de contratos vinculados al proceso</b></label>
         <div class="col d-flex">
             <mat-form-field class="w-70">
-                <input matInput (keypress)="number($event)" onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                <input matInput (keypress)="number($event)" onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                 oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                 type="number" maxlength="2" formControlName="numeroContratos" required>
             </mat-form-field>
