--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-convocados-dj/form-convocados-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-convocados-dj/form-convocados-dj.component.html
@@ -8,7 +8,7 @@
         <div class="col d-flex">
             <mat-form-field class="w-70">
                 <input matInput (keypress)="validateNumberKeypress($event)"
-                    onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                    onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                     oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                     type="number" maxlength="2" formControlName="numeroContratos" required #numeroContratos>
             </mat-form-field>
