--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-amortizacion-anticipo/form-amortizacion-anticipo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-amortizacion-anticipo/form-amortizacion-anticipo.component.html
@@ -81,7 +81,7 @@
                                             required
                                             formControlName="valorAmortizacion"
                                             (keypress)="validateNumberKeypress($event)"
-                                            onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                            onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                             [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                                 </mat-form-field>
                                 <span   class="contador"
