--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/form-solicitar-contratacion/form-solicitar-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/form-solicitar-contratacion/form-solicitar-contratacion.component.html
@@ -106,7 +106,7 @@
                       type="text"
                       maxlength="30"
                       formControlName="llaveMEN"
-                      onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                      onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                       oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                     />
                   </mat-form-field>
