--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/ver-detalle-contratacion/plazo-ejecucion/plazo-ejecucion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/ver-detalle-contratacion/plazo-ejecucion/plazo-ejecucion.component.html
@@ -14,7 +14,7 @@
                 <mat-form-field class="full-width">
                     <input matInput #plazoMeses type="number" min="0" max="999" maxlength="3"
                         formControlName="plazoMeses" name="plazoMeses" (keypress)="validateNumberKeypress($event)"
-                        onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                        onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                         oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                          />
                 </mat-form-field>
@@ -47,7 +47,7 @@
                         max="29"
                         maxlength="2"
                         name="plazoDias" (change)="validatenomore30()" (keypress)="validateNumberKeypress($event)"
-                        onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                        onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                         oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                         onkeyup="if(this.value>29) this.value = 29;" [matTooltipPosition]="'above'"
                         matTooltip="Campo numérico igual o menor a 29 días" matTooltipClass="info-tooltip" />
