--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-admin/components/formulario-proyectos/formulario-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-admin/components/formulario-proyectos/formulario-proyectos.component.html
@@ -117,7 +117,7 @@
                           currencyMask
                           [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
                           (keypress)="blockNumber($event)"
-                          onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                          onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                           oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                         />
                       </mat-form-field>
