--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-costo-variable-gog/form-costo-variable-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-costo-variable-gog/form-costo-variable-gog.component.html
@@ -114,7 +114,7 @@
               <mat-form-field class="full-width">
                 <input matInput #valorDescuento currencyMask maxlength="20" required formControlName="valorDescuento"
                   (keypress)="validateNumberKeypress($event)"
-                  onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                   [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }" />
               </mat-form-field>
               <span class="contador" [matTooltipPosition]="'above'" matTooltip="Valor en ($) Pesos colombianos"
