--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-tipopago3-gog/form-tipopago3-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-tipopago3-gog/form-tipopago3-gog.component.html
@@ -32,7 +32,7 @@
                             <mat-form-field class="full-width">
                                 <input matInput #valorDescuento currencyMask maxlength="20" required
                                     formControlName="valorDescuento" (keypress)="validateNumberKeypress($event)"
-                                    onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                    onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                     oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                     [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                             </mat-form-field>
