--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-costo-variable-gbftrec/form-costo-variable-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-costo-variable-gbftrec/form-costo-variable-gbftrec.component.html
@@ -28,7 +28,7 @@
                                 <mat-form-field class="full-width">
                                     <input matInput #nuevoValorAportante1 currencyMask maxlength="20" required
                                         formControlName="nuevoValorAportante1" (keypress)="validateNumberKeypress($event)"
-                                        onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                        onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                         [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }" />
                                 </mat-form-field>
                                 <span class="contador" [matTooltipPosition]="'above'"
@@ -72,7 +72,7 @@
                                 <mat-form-field class="full-width">
                                     <input matInput #nuevoValorAportante2 currencyMask maxlength="20" required
                                         formControlName="nuevoValorAportante2" (keypress)="validateNumberKeypress($event)"
-                                        onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                        onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                         [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }" />
                                 </mat-form-field>
                                 <span class="contador" [matTooltipPosition]="'above'"
@@ -111,7 +111,7 @@
                                 <mat-form-field class="full-width">
                                     <input matInput #nuevoValorAportante3 currencyMask maxlength="20" required
                                         formControlName="nuevoValorAportante3" (keypress)="validateNumberKeypress($event)"
-                                        onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                        onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                         [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }" />
                                 </mat-form-field>
                                 <span class="contador" [matTooltipPosition]="'above'"
@@ -155,7 +155,7 @@
                                 <mat-form-field class="full-width">
                                     <input matInput #nuevoValorAportante4 currencyMask maxlength="20" required
                                         formControlName="nuevoValorAportante4" (keypress)="validateNumberKeypress($event)"
-                                        onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                        onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                         [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }" />
                                 </mat-form-field>
                                 <span class="contador" [matTooltipPosition]="'above'"
