--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-descripcion-actuacion/form-descripcion-actuacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-descripcion-actuacion/form-descripcion-actuacion.component.html
@@ -238,7 +238,7 @@
                         <div class="col d-flex align-items-center">
                             <mat-form-field class="full-width">
                                 <input matInput (keypress)="validateNumberKeypress($event)"
-                                    onKeyPress="if(this.value.length>=this.maxLength) return false;" type="number"
+                                    onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''" type="number"
                                     oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                     maxlength="7" formControlName="diasVencimientoTerminos" required
                                     #diasVencimientoTerminos>
