--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/accord-vigencias-valor/accord-vigencias-valor.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/accord-vigencias-valor/accord-vigencias-valor.component.html
@@ -162,7 +162,7 @@
                                                     <input matInput #valorAmparo currencyMask maxlength="20" required
                                                         formControlName="valorAmparo"
                                                         (keypress)="validateNumberKeypress($event)"
-                                                        onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                                        onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                                         [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }" />
                                                 </mat-form-field>
                                                 <span class="contador" [matTooltipPosition]="'above'"
