--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
@@ -234,7 +234,7 @@
                                                     required
                                                     formControlName="valorDescuento"
                                                     (keypress)="validateNumberKeypress($event)"
-                                                    onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                                    onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                                     (ngModelChange)="totalPagoDescuentos()"
                                                     [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                                         </mat-form-field>
@@ -288,7 +288,7 @@
                                             maxlength="20"
                                             required
                                             formControlName="valorAPagarDespues" (keypress)="validateNumberKeypress($event)"
-                                            onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                            onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                             [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                                 </mat-form-field>
                                 <span   class="contador"
