--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
@@ -97,7 +97,7 @@
                                 <mat-form-field class="full-width">
                                     <input matInput #valorAPagarDespues currencyMask maxlength="10" required
                                         formControlName="valorAPagarDespues" (keypress)="validateNumberKeypress($event)"
-                                        onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                        onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                         [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                                 </mat-form-field>
                             </div>
@@ -177,7 +177,7 @@
                                                     <input matInput #valorDescuento currencyMask maxlength="20" required
                                                         formControlName="valorDescuento"
                                                         (keypress)="validateNumberKeypress($event)"
-                                                        onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                                        onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                                         (ngModelChange)="totalPagoDescuentos()"
                                                         [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                                                 </mat-form-field>
