--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-otros-costosservicios/form-solicitud-otros-costosservicios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-otros-costosservicios/form-solicitud-otros-costosservicios.component.html
@@ -144,7 +144,7 @@
                                 <mat-form-field class="full-width">
                                     <input matInput #valorFacturado currencyMask maxlength="20" required
                                         formControlName="valorFacturado" (keypress)="validateNumberKeypress($event)"
-                                        onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                        onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                         (ngModelChange)="checkValorTotal( $event )"
                                         [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                                 </mat-form-field>
