--- a/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/hoja-vida-contratista/hoja-vida-contratista.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/hoja-vida-contratista/hoja-vida-contratista.component.html
@@ -24,7 +24,7 @@
           max="999"
           required
           (keypress)="validateNumberKeypress($event)"
-          onKeyPress="if(this.value.length>=this.maxLength) return false;"
+          onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
           oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
         />
       </mat-form-field>
@@ -126,7 +126,7 @@
                       required
                       #cantidadHvRequeridas
                       (keypress)="validateNumberKeypress($event)"
-                      onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                      onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                       oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                     />
                   </mat-form-field>
@@ -182,7 +182,7 @@
                       required
                       #cantidadHvRecibidas
                       (keypress)="validateNumberKeypress($event)"
-                      onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                      onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                       oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                     />
                   </mat-form-field>
@@ -238,7 +238,7 @@
                       required
                       #cantidadHvAprobadas
                       (keypress)="validateNumberKeypress($event)"
-                      onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                      onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                       oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                     />
                   </mat-form-field>
