--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/definir-fuentes-y-usos/definir-fuentes-y-usos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/definir-fuentes-y-usos/definir-fuentes-y-usos.component.html
@@ -109,7 +109,7 @@
                         currencyMask
                         required
                         maxLength="20"
-                        onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                        onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                   oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                         [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'left' }"
                         formControlName="valorAportanteProyecto"
@@ -376,7 +376,7 @@
                                       currencyMask
                                       required
                                       maxLength="20"
-                                      onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                      onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                       oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                       [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'left' }"
                                       formControlName="valorUso"
