--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/form-gestionar-fuentes-administrativas/form-gestionar-fuentes-administrativas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/form-gestionar-fuentes-administrativas/form-gestionar-fuentes-administrativas.component.html
@@ -136,7 +136,7 @@
                           (keyup)="reste(fuente)"
                           required
                           maxLength="20"
-                          onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                          onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                   oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                           [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'left' }"
                           formControlName="valorSolicitado"
